# crazy-glue

./: .coverage  .gitignore  README.md  haiku-rag.yaml  installation.yaml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: ag-ui.md  architecture.md  getting-started.md  index.md  lessons.md  room-configuration.md
docs/css/: mermaid.css
docs/js/: mermaid-init.js
docs/rooms/: brainstorm.md  code-review.md  debate.md  index.md  introspective.md  parallelization.md  planning.md  reflection.md  routing.md  shark-tank.md  thought-candidates.md  tree-of-thoughts.md
docs/specs/: agent-mcp-analysis.md  analysis-mcp-tools.md  analysis-room-cleanup.md  analysis-room-refactor.md  conversational-planning.md  soliplex-lessons.md
docs/specs/milestones/: 00-overview.md  01-single-tool-poc.md  02-read-operations.md  03-write-operations.md  04-docs-and-tests.md
rooms/analysis/: room_config.yaml
rooms/brainstorm/: room_config.yaml
rooms/code-review/: room_config.yaml
rooms/collaborative-research/: room_config.yaml
rooms/debate/: room_config.yaml
rooms/exa-mcp/: room_config.yaml
rooms/introspective/: room_config.yaml
rooms/parallelization/: room_config.yaml
rooms/planning/: room_config.yaml
rooms/reflection/: room_config.yaml
rooms/room123/: room_config.yaml
rooms/routing/: room_config.yaml
rooms/shark-tank/: room_config.yaml
rooms/thought-candidates/: room_config.yaml
rooms/tree-of-thoughts/: room_config.yaml
src/crazy_glue/: __init__.py
src/crazy_glue/analysis/: __init__.py  (+7 more)
tests/: test_analysis_room.py
(+27 files in other folders)
