[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crazy-glue"
version = "0.1.0"
description = "Sample Soliplex rooms demonstrating agentic design patterns"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "soliplex @ git+https://github.com/soliplex/soliplex.git",
    "agentic-patterns @ git+https://github.com/runyaga/agentic-patterns-book.git",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crazy_glue"]

[tool.ruff]
line-length = 79
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
force-single-line = true
